# project-template

./: cookiecutter.json
.github/workflows/: pytest.yaml
{{cookiecutter.project_slug}}/: LICENSE  README.md  env.sh  pyproject.toml  setup.py
